# bevy_jam_7

./: .env.template  .gitignore  Cargo.toml  Makefile  Makefile.audio  README.md  build_web.sh
assets/: chaos_dream.ldtk
assets/balance/: all.memory.csv  all.unit.csv
assets/image_font/: example_variable_width_font.image_font.ron
assets_src/: chaos_dream.psd
crates/rock_audio/: Cargo.toml
crates/rock_audio/src/: lib.rs
crates/rock_materials/: Cargo.toml
crates/rock_materials/assets/: procreate
crates/rock_materials/examples/: blackhole.rs  chromatic_aberration.rs  chromatic_aberration_v2.rs  dissolver.rs  fire_portal.rs  glitch.rs  glitch_snake.rs  gravity_well.rs  laser_beam.rs  liquid.rs  mpeg_artifact.rs  mpeg_artifact_v2.rs  paper_cutout.rs  poison.rs  soul.rs  void_pattern.rs  water_color.rs  wave_distortion.rs
crates/rock_materials/src/: black_hole.wgsl  blackhole.rs  chromatic_aberration.rs  chromatic_aberration.wgsl  chromatic_aberration_v2.rs  chromatic_aberration_v2.wgsl  dissolver.rs  dissolver.wgsl  fire_portal.rs  fire_portal.wgsl  glitch.rs  glitch.wgsl  glitch_snake.rs  glitch_snake.wgsl  gravity_well.rs  gravity_well.wgsl  laser_beam.rs  laser_beam.wgsl  lib.rs  liquid.rs  liquid.wgsl  mpeg_artifact.rs  mpeg_artifact.wgsl  mpeg_artifact_v2.rs  mpeg_artifact_v2.wgsl  paper_cutout.rs  paper_cutout.wgsl  poison.rs  poison.wgsl  soul.rs  soul.wgsl  void_pattern.rs  void_pattern.wgsl  water_color.rs  water_color.wgsl  wave_distortion.rs  wave_distortion.wgsl
crates/rock_particles/: Cargo.toml
crates/rock_particles/examples/: coin_example.rs  combo_ring_example.rs  dust_example.rs  explosion_example.rs  poison_example.rs  sparks_example.rs  spread_example.rs  steam_example.rs  vortex_example.rs
crates/rock_particles/src/: coin.rs  combo_ring.rs  dust.rs  explosion.rs  lib.rs  mod.rs  poison.rs  sparks.rs  spread.rs  steam.rs  suck.rs  vortex.rs
src/: animation.rs  asset_processing.rs  asset_tracking.rs  dbg.rs  main.rs  palette.rs  prelude.rs  sprite_layer.rs  ui_camera.rs
src/config/: mod.rs
src/dev_tools/: bevy_inspector_egui.rs  log_components.rs  mod.rs  validate_preloading.rs
src/dev_tools/change_detection/: mod.rs
src/dev_tools/dev_background_runner/: mod.rs  quit_game_sys.rs
src/dev_tools/inspect/: mod.rs  resource_sys.rs  sys_filter_template
src/dev_tools/print_log/: mod.rs
src/dev_tools/scenario_test/: mod.rs
src/dev_tools/visual_debug/: mod.rs
src/game_manager/: camera.rs  float_damage.rs  mod.rs  procreate.rs
src/game_manager/actor/: actor.rs  custom_material.rs  mesh.rs  mod.rs  model.rs  relation.rs  sprite.rs
src/game_manager/animation/: mod.rs  put.rs  shake_despawn.rs  shake_left_right.rs  shrink_despawn.rs  squash.rs  wobble.rs
src/game_manager/army/: color.rs  enemy.rs  mod.rs  player.rs
src/game_manager/army/attack/: corpse.rs  mod.rs
src/game_manager/army/effect/: mod.rs
src/game_manager/army/effect/buff/: attack_speed.rs  block.rs  mod.rs  poison.rs  stun.rs
src/game_manager/army/effect/debuff/: mod.rs  poison.rs  stun.rs
src/game_manager/army/morale/: combat_flux.rs  mod.rs  rapid_kills.rs  unit_reduce.rs
src/game_manager/army/movement/: mod.rs
src/game_manager/army/squad/: enemy_squad.rs  mod.rs  move_squad.rs  player_squad.rs  spawn.rs  squad.rs
src/game_manager/army/units/: mod.rs  shadow.rs  unit.rs
src/game_manager/army/units/archer/: attack.rs  mod.rs
src/game_manager/army/units/cavalry/: mod.rs
src/game_manager/army/units/shield/: attack.rs  mod.rs
src/game_manager/army/units/spear/: mod.rs
src/game_manager/audio/: mod.rs  music.rs  perceptual.rs  sfx.rs
src/game_manager/background/: mod.rs
src/game_manager/balance/: apply_unit.rs  memory_csv.rs  mod.rs  units_csv.rs
src/game_manager/battle/: end.rs  mod.rs  progress.rs  status.rs
src/game_manager/land/: dark.rs  mod.rs  space.rs
src/game_manager/memory/: mod.rs  squad_hit_count.rs  squad_take_hit_count.rs
src/game_manager/memory/big_eye/: big_eye.rs  ghost.rs  laser.rs  mod.rs
src/game_manager/memory/big_hand/: big_hand.rs  mod.rs  vortex.rs
src/game_manager/memory/golden_heart/: ghost.rs  golden_heart.rs  mod.rs  wave.rs
src/game_manager/memory/ra/: mod.rs  portal.rs  ra.rs
src/game_manager/pawn/: health.rs  mod.rs  pawn.rs
src/game_manager/scene/: boundary.rs  mod.rs  spawn.rs  switch_level.rs  tree.rs
src/game_manager/score/: mod.rs
src/game_manager/shop/: mod.rs  player_gold.rs
src/game_manager/ui/: mod.rs
src/game_manager/ui/battle_state/: bottom_right.rs  mod.rs  root.rs  top_middle.rs  top_right.rs
src/game_manager/ui/game_end_state/: leaderboard.rs  mod.rs  root.rs
src/game_manager/ui/persistent/: bottom_right.rs  mod.rs  root.rs
src/game_manager/ui/prepare_state/: bottom_left.rs  bottom_middle.rs  bottom_right.rs  mod.rs  root.rs  top_middle.rs  top_right.rs
src/game_manager/ui_no_root/: game_lose_state.rs  game_win_state.rs  mod.rs  sell_memory_tooltip.rs  sell_unit_tooltip.rs  world_unit_tooltipi.rs
src/game_manager/vfx/: aseprite.rs  firework.rs  hit_flash.rs  mod.rs  play.rs
src/game_manager/vfx/camera_vfx/: fade.rs  mod.rs  shake.rs
src/menus/: credits.rs  main.rs  pause.rs  settings.rs
src/screens/: gameplay.rs  mod.rs  splash.rs
src/screens/loading/: mod.rs  preload_assets.rs  spawn_level.rs
src/test_scene/: big_eye.rs  big_hand.rs  golden_heart.rs  mod.rs  ra.rs
src/theme/: interaction.rs  mod.rs  widget.rs
