[package]
name = "rock_audio"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18", default-features = false, features = [
    "2d_bevy_render",
    "default_app",
] }
bevy_seedling = { version = "0.7.0", optional = true }
bevy_rand = { version = "0.13", features = [
    "rand_chacha",
    "std",
], default-features = false, optional = true }
rand = { version = "0.9", optional = true }

[target.'cfg(target_arch = "web")'.dependencies]
bevy_seedling = { version = "0.7.0", optional = true, features = ["web_audio"] }

[features]
default = ["backend"]
backend = ["dep:bevy_seedling", "dep:bevy_rand", "dep:rand"]
