[package]
name = "rock_particles"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18", default-features = false, features = [
    "2d_bevy_render",
    "default_app",
] }
bevy_hanabi = { version = "0.18", default-features = false, features = [
    "2d",
], optional = true }

# Example-specific dependencies
[dev-dependencies]
bevy = { version = "0.18", features = ["2d"] }
rock_materials = { path = "../rock_materials" }

[features]
default = ["backend"]
backend = ["dep:bevy_hanabi"]
